k8s/infrastructure/policies/home-automation-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-home-assistant
  namespace: home-automation
spec:
  description: 'Allow Home Assistant traffic and integrations'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gateway
      toPorts:
        - ports:
            - port: '8123'
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: '8123'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-automation
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
    - toFQDNs:
        - matchPattern: '*.home-assistant.io'
        - matchPattern: '*.nabucasa.com'
        - matchPattern: 'raw.githubusercontent.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: storage
      toPorts:
        - ports:
            - port: '80'
              protocol: TCP
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mqtt
  namespace: home-automation
spec:
  description: 'Allow MQTT broker communications'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: '1883'
              protocol: TCP
            - port: '8883'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
